--- a/templates/customer/customer_login.html
+++ b/templates/customer/customer_login.html
@@ -15,13 +15,47 @@
             background-color: #f0f0f0;
         }
 
+        .container {
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 600px;
+            width: 100%;
+        }
+
+        .form-container {
+            flex: 1;
+            margin-right: 20px;
+        }
+
+        .signup-container {
+            flex: 1;
+            text-align: center;
+        }
+
+        .form-input {
+            margin-bottom: 20px;
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
+
+        .form-input:last-child {
+            margin-bottom: 0;
+        }
+
         .button-container {
             text-align: center;
         }
 
-        .login-button, .signup-button {
+        .login-button {
             padding: 10px 20px;
-            margin: 10px;
+            margin: 10px 0;
             font-size: 18px;
             text-decoration: none;
             background-color: #2b598a;
@@ -29,13 +63,46 @@
             border: none;
             border-radius: 5px;
             cursor: pointer;
+            width: 100%;
+        }
+
+        .signup-button {
+            padding: 10px 20px;
+            font-size: 18px;
+            text-decoration: none;
+            background-color: #4a76a8;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .signup-button:hover {
+            background-color: #2b598a;
         }
     </style>
 </head>
+
 <body>
-    <div class="button-container">
-        <a href="/login" class="login-button">Login</a>
-        <a href="/signup" class="signup-button">Sign Up</a>
+    <div class="container">
+        <div class="form-container">
+            {% if messages %}
+                {% for message in messages %}
+                    <div>{{ message }}</div>
+                {% endfor %}
+            {% endif %}
+            <form method="post" action="{% url 'customer-login' %}">
+                {% csrf_token %}
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" class="form-input" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" class="form-input" required>
+                <button type="submit" class="login-button">Login</button>
+            </form>
+        </div>
+        <div class="signup-container">
+            <button class="signup-button" onclick="location.href='{% url 'customer-signup' %}'">Sign up</button>
+        </div>
     </div>
 </body>
 </html>
