--- a/templates/customer/customer_profile.html
+++ b/templates/customer/customer_profile.html
@@ -2,4 +2,8 @@
 
 {% block content %}
 <h1>Hello {{ customer.first_name }}!</h1>
+<p>Name: {{ customer.first_name }} {{ customer.last_name }}</p> 
+<p>Address: {{ customer.address }}</p>
+<p>Email: {{ customer.email }}</p>
+<p>Phone: {{ customer.phone }}</p>
 {% endblock %}
